--- a/templates/setup_sample_new_vpc.template
+++ b/templates/setup_sample_new_vpc.template
@@ -66,7 +66,7 @@ Parameters:
   SSHAccessCIDR:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
-    Description: Allowed CIDR block for external access to cluster nodes for mgmt
+    Description: Allowed CIDR block for external access to cluster nodes for SSH. Ignored for the "Create production ready environment" false case.
     Type: String
   QSS3BucketName:
     AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
