--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,20 +8,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      AWS_DEFAULT_REGION: eu-west-2
-      TEST_S3_BUCKET: solace-cf-quickstart-ghactionstest
-      TESTSTACKPREFIX: T`echo "$(date +%s)" | rev`
-      TESTSTACKNAME: $TESTSTACKPREFIX-sol-aws-ghactionstest
+    timeout-minutes: 30
 
     steps:
     - name: Set env
       run: |
         echo "AWS_DEFAULT_REGION=eu-west-2" >> $GITHUB_ENV
-        echo "TEST_S3_BUCKET=solace-cf-quickstart-ghactionstest" >> $GITHUB_ENV
+        echo "TEST_S3_BUCKET=solace-cf-quickstart-ghtest" >> $GITHUB_ENV
         TESTSTACKPREFIX=T$(echo $(date +%s) | rev)
         echo "TESTSTACKPREFIX=$TESTSTACKPREFIX" >> $GITHUB_ENV
-        echo "TESTSTACKNAME=$TESTSTACKPREFIX-sol-aws-ghactionstest" >> $GITHUB_ENV
+        echo "TESTSTACKNAME=$TESTSTACKPREFIX-sol-aws-ghtest" >> $GITHUB_ENV
 
     - name: Checkout
       uses: actions/checkout@v2
@@ -56,7 +52,7 @@ jobs:
 
     - name: Test with production deployment option (create public subnet)
       run: |
-        aws cloudformation create-stack --stack-name $TESTSTACKNAME --template-body file://templates/solace-master.template --parameters file://ci/solace-aws-ha-3az-prod-travistest.json --on-failure DO_NOTHING --capabilities CAPABILITY_NAMED_IAM
+        aws cloudformation create-stack --stack-name $TESTSTACKNAME --template-body file://templates/solace-master.template --parameters file://ci/solace-aws-ha-3az-prod-travistest.json --on-failure ROLLBACK --capabilities CAPABILITY_NAMED_IAM
         echo "Waiting for stack create complete"
         until aws cloudformation describe-stacks --stack-name $TESTSTACKNAME | grep -m 1 -E 'CREATE_COMPLETE|DELETE_IN_PROGRESS'; do sleep 10; done
         aws cloudformation describe-stack-events --stack-name $TESTSTACKNAME
