--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -72,7 +72,33 @@ jobs:
     - name: Delete test deployment (Cleanup)
       if: ${{ always() }}
       run: |
-        aws cloudformation delete-stack --stack-name $TESTSTACKNAME
+        aws cloudformation delete-stack --stack-name $TESTSTACKNAME || echo Couldn't delete stack $TESTSTACKNAME
         echo "Waiting for stack delete complete"
         stackid="$(aws cloudformation describe-stacks --stack-name $TESTSTACKNAME | grep StackId | awk -F '"' '{print $4}')"
         if [ -n "$stackid" ]; then until aws cloudformation describe-stacks --stack-name $stackid | grep -m 1 "DELETE_COMPLETE"; do sleep 10; done; fi
+
+    - name: Testing with No Private Subnet
+      run: |
+        export TESTSTACKNAME2="$TESTSTACKNAME-1"
+        echo "TESTSTACKNAME2=$TESTSTACKNAME2" >> $GITHUB_ENV
+        sed -i "s@true@false@g" ci/solace-aws-ha-3az-prod-travistest.json
+        aws cloudformation create-stack --stack-name $TESTSTACKNAME2 --template-body file://templates/solace-master.template --parameters file://ci/solace-aws-ha-3az-prod-travistest.json --on-failure DO_NOTHING --capabilities CAPABILITY_NAMED_IAM
+        echo "Waiting for stack create complete"
+        until aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2 | grep -m 1 -E 'CREATE_COMPLETE|DELETE_IN_PROGRESS'; do sleep 10; done
+        aws cloudformation describe-stack-events --stack-name $TESTSTACKNAME2
+        aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2
+
+    - name: Delete No Private Subnet test deployment (Cleanup)
+      if: ${{ always() }}
+      run: |
+        aws cloudformation delete-stack --stack-name $TESTSTACKNAME2 || echo Couldn't delete stack $TESTSTACKNAME2
+        echo "Waiting for stack delete complete"
+        stackid="$(aws cloudformation describe-stacks --stack-name $TESTSTACKNAME2 | grep StackId | awk -F '"' '{print $4}')"
+        if [ -n "$stackid" ]; then until aws cloudformation describe-stacks --stack-name $stackid | grep -m 1 "DELETE_COMPLETE"; do sleep 10; done; fi
+
+    - name: Update QuickStart S3 on success for SolaceProducts
+      if: ${{ success() }} && github.event_name == 'push'
+      run: |
+        if [ ${{ github.ref }} == 'refs/heads/master' ] && [ ${{ github.repository_owner }} == 'SolaceProducts' ] ; then
+          aws s3 sync . s3://solace-products/pubsubplus-aws-ha-quickstart/latest --acl public-read
+        fi
