--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -21,8 +21,13 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
-      with:
-        submodules: recursive
+
+    - name: Recourse submodules
+      run: |
+        sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules; cat .gitmodules
+        git submodule sync
+        git submodule init
+        git submodule update
 
     - name: Configure AWS credentials from Test account
       uses: aws-actions/configure-aws-credentials@v1
