Updated test script

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -63,9 +63,13 @@ jobs:
         sleep 30; aws cloudformation describe-stacks --stack-name $TESTSTACKNAME
         until aws cloudformation describe-stacks --stack-name $TESTSTACKNAME | grep -m 1 -E 'CREATE_COMPLETE'; do
           sleep 10
-          if aws cloudformation describe-stacks --stack-name $TESTSTACKNAME | grep -m 1 -E 'DELETE_IN_PROGRESS'; then exit 1; fi
+          if aws cloudformation describe-stacks --stack-name $TESTSTACKNAME | grep -m 1 -E 'ROLLBACK_IN_PROGRESS'; then
+            aws cloudformation describe-stack-events --stack-name $TESTSTACKNAME
+            aws cloudformation describe-stacks --stack-name $TESTSTACKNAME
+            exit 1
+          fi
           sleep 10
-          done
+        done
         aws cloudformation describe-stack-events --stack-name $TESTSTACKNAME
         aws cloudformation describe-stacks --stack-name $TESTSTACKNAME
         echo "Pausing to get the ELB ready"; sleep 10
