Only create BastionHostRole if using Bastion host

--- a/templates/solace-master.template
+++ b/templates/solace-master.template
@@ -256,6 +256,7 @@ Resources:
         NumberOfAZs: !Ref 'NumberOfAZs'
   BastionHostRole:
     Type: 'AWS::IAM::Role'
+    Condition: UsePrivateSubnets
     Properties:
       Path: /
       AssumeRolePolicyDocument:
