--- a/templates/solace-master.template
+++ b/templates/solace-master.template
@@ -285,6 +285,7 @@ Resources:
   BastionStack:
     Type: AWS::CloudFormation::Stack
     Condition: UsePrivateSubnets
+    DependsOn: VPCStack
     Properties:
       TemplateURL:
         !Sub
@@ -292,6 +293,7 @@ Resources:
           - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
             S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       Parameters:
+        AlternativeIAMRole: !Ref BastionHostRole
         BastionInstanceType: t2.micro
         EnableBanner: 'true'
         BastionBanner: !Sub
